res/examples/valid/let_decl_with_existing_const_in_closed_scope.eg
{
    const a = 123;
};

let a = 456;