res/examples/invalid/const_decl_with_existing_const_in_outer_scope.eg
const a = 123;

{
    const a = 456;
};

// out: TypeError: a is already defined